--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ h1 svg {
 #header {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin: 20px 6px;
 }
 
 #buttons {
@@ -49,4 +50,17 @@ button {
     padding: 5px 20px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+#game {
+    line-height: 35px;
+    height: 105px;
+    overflow: hidden;
+}
+
+div.word {
+    display: inline-block;
+    font-family: "Roboto Mono", sans-serif;
+    margin: 0 5px;
+
 }
