--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,10 @@ button {
     position: relative;
 }
 
+#game:focus {
+    outline: 0;
+}
+
 #words {
     filter: blur(5px);
 }
@@ -92,4 +96,33 @@ div.word {
 
 .letter.incorrect {
     color: #f55;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+#cursor {
+    display: none;
+    width: 2px;
+    height: 1.6rem;
+    background-color: var(--primaryColor);
+    position: fixed;
+    top: 188px;
+    left: 83px;
+    animation: blink 1s infinite;
+}
+
+#game:focus #cursor {
+    display: block;
 }
