--- a/styles.css
+++ b/styles.css
@@ -126,3 +126,16 @@ div.word {
 #game:focus #cursor {
     display: block;
 }
+
+#game.over #words {
+    opacity: .5;
+    filter: blur(0px);
+}
+
+#game.over:focus #cursor {
+    display: none;
+}
+
+#game.over #forcus-error {
+    display: none;
+}
